# sleap-RTC

./: .gitignore  DEVELOPMENT.md  README.md  TESTING_MODEL_REGISTRY.md  WORKER_SIGNALING_HANDOFF.md  config.example.toml  pyproject.toml  simple_room_test.py  sleap-rtc.toml  test_error_handling.py  test_filesystem.py  test_shared_storage_integration.py  test_worker_shared_storage.py
.github/workflows/: worker_production.yml  worker_test.yml
config/: README.md  sleap-rtc.toml
docs/: ARCHITECTURE_DIAGRAM.md  COMPREHENSIVE_ARCHITECTURE_DIAGRAM.md  DEVELOPMENT.md  INFERENCE_CLI_PROPOSAL.md  MODEL_REGISTRY_ARCHITECTURE_DISCUSSION.md  README.md  WEBRTC_VS_S3_CHUNKING.md
examples/: WEBVIEW_README.md  alias_usage_examples.md  demo_alias_management.py  demo_client_registry.py  demo_model_import.py  populate_demo_registry.py  test_concurrent_registries.py  test_model_registry_integration.py
openspec/changes/add-client-room-connection/: design.md  proposal.md  tasks.md
openspec/changes/add-client-room-connection/specs/cli/: spec.md
sleapRTC_client/: sleapRTC_client.py
sleap_RTC/: RTCclient.py  RTCworker.py  cli.py  rtc_client.py  rtc_client_track.py  rtc_worker.py
sleap_RTC/client/: Dockerfile  client.py  client_class.py  client_track_class.py  registry_query.py  rtc_gui_client.py
sleap_RTC/client/.devcontainer/: devcontainer.json
sleap_RTC/worker/: Dockerfile  model_registry.py  pyproject.toml  run_training.py  worker.py  worker_class.py
sleap_RTC/worker/.devcontainer/: devcontainer.json
sleap_rtc/: cli.py  config.py  exceptions.py  filesystem.py  protocol.py  rtc_client.py  rtc_client_track.py  rtc_worker.py
sleap_rtc/client/: Dockerfile  client.py  client_class.py  client_model_registry.py  client_track_class.py  model_utils.py  pyproject.toml  registry_server.py
sleap_rtc/worker/: admin_controller.py  capabilities.py  crdt_state.py  file_manager.py  job_coordinator.py  job_executor.py  mesh_coordinator.py  mesh_messages.py  progress_reporter.py  pyproject.toml  run_training.py  state_manager.py  worker.py  worker_class.py  worker_class.py.backup  zmq_check.py
tests/: test_client_model_registry.py  test_model_tagging.py  test_model_utils.py
tests/worker/: test_model_registry.py
