[project]
name = "sleap-rtc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiortc",
    "loguru",
    "websockets",
    "requests",
    "pyzmq",
    "jsonpickle",
    "boto3",
    "sleap-nn[torch]",
]

[project.scripts]
sleap-rtc = "sleap_rtc.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.black]
line-length = 88

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.css'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''