[project]
name = "webrtc-worker-sleap-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiortc",
    "boto3",
    "pyzmq",
    "requests",
    "websockets",
    # "sleap-nn[torch]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]