[project]
name = "webrtc-external"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiortc",
    "loguru",
    "websockets",
    "requests",
    "pyzmq",
    "jsonpickle",
    "boto3",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "python-jose[cryptography]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]