[project]
name = "webrtc-worker-sleap-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiortc",
    "opencv-python-headless>=4.12.0.88",
    "pyzmq",
    "requests",
    "websockets",
    # "sleap-nn[torch]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
